# R25-IncidentDetection

./: .gitignore  CHANGELOG.md  Contributing.md  LICENSE  License.md  README.md  README.md.bak  package-lock.json  package.json
Code/: Code.Rproj  GitHub.lnk  README.md  README.md.bak  master_script.R
Code/MN_CAD_analysis/: CAD_Waze_functions.R
Code/analysis/: EDA.R  Mn_Eval.R  PredictWeek.R  RandomForest_Fx.R  RandomForest_Train.R
Code/dashboardmockup/: app.R  pivotdash.R
Code/genAI_overlay/: executor.py  my_workflow.py
Code/genAI_overlay_take2/: .env  __init__.py  app.py  client.py  frontend.html  main.py  pyproject.toml  scratch.py  server.py  server2.py  server_newcontent.py  server_orig.py  simple.py  test.py
Code/genAI_overlay_take4/: .env  .gitignore  LICENSE  README.md  client.py  pyproject.toml  setup.py
Code/genAI_overlay_take4/src/mcp_server_ds/: server.py
Code/utility/: Get_weather_forecasts.R  Join_Road_Weather.R  MN_CAD_load.R  MN_CAD_load_historical.R  MN_CAD_load_pilot_data.R  MN_pilot_helper_functions.R  OpenStreetMap_pull.R  Prep_ForecastWeather.R  Prep_OSMNetwork.R  TomorrowIO_pull.R  createdash.R  get_packages.R  load_crashes.R  osm_query.R  pivotdash.R  prep_hist_crash.R  prep_hist_crash2.R  timezone_adj.R
Demos/: README.md
TN_Clean/: .Rhistory
TN_Clean/analysis/: PredictWeek_TN.R  RF_Model_Eval_Re-fit_local.R  Visualize_Next_Week.R
TN_Clean/datacleaning/: MakeSpaceTimeGrids_TN.R  Plot_weather_gridded.R  Plot_weather_points.R
TN_Clean/utility/: Prep_ForecastWeather.R  Prep_HistoricalCrash.R  Prep_HistoricalWeather.R  Prep_SpecialEvents.R  Workstation_setup.R  get_packages.R
public/: index.html
src/: app.js
src/data/: seo.js  user.js
src/pages/: datasets.jsx  demos.jsx  homepage.jsx  information.jsx
src/pages/styles/: homepage.css
(+47 files in other folders)
