[project]
name = "genai-overlay-take2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "dotenv>=0.9.9",
    "fastmcp>=2.10.6",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "litellm>=1.74.9.post1",
    "mcp>=1.12.2",
    "mcp-use>=1.3.7",
    "numpy>=2.3.2",
    "openai>=1.98.0",
    "pandas>=2.3.1",
    "pip>=25.1.1",
    "plotly>=6.3.0",
    "pypdf>=5.9.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.47.1",
    "uuid>=1.30",
    "zaturn>=0.2.2",
]
